# napari-tiler

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  experimental_nox_test.yml  release.yml  test-pypi.yml  test_and_deploy.yml  tests.yml
docs/: index.md
src/napari_tiler/: __init__.py  _dock_widget.py  _merger_widget.py  _tiler_widget.py  merger_widget.py  napari.yaml  tiler_widget.py
src/napari_tiler/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
src/napari_tiler/components/: tile_dimensions.py
