[tool.poetry]
name = "napari-tiler"
version = "0.0.1"
description = "N-dimensional tiling and merging support for napari"
readme = "README.md"
license = "LICENCE"
authors = ["Tim Morello <tdmorello@gmail.com>"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tdmorello/napari-tiler/issues"
"Documentation" = "https://github.com/tdmorello/napari-tiler#README.md"
"Source Code" = "https://github.com/tdmorello/napari-tiler"
"User Support" = "https://github.com/tdmorello/napari-tiler/issues"

[tool.poetry.dependencies]
# TODO which of these can be removed or moved to dev dependencies?
python = ">=3.7, <3.11"
importlib-metadata = "<4.3"
napari-plugin-engine = "^0.2.0"
numpy = "^1.21.4"
tiler = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
coverage = {extras = ["toml"], version = "^6.2"}
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-black = "^0.2.3"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
mypy = "^0.920"
nox = "^2021.10.1"

# optional
pytest = {version = "^6.2.5", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
pytest-faulthandler = {version = "^2.0.1", optional = true}
pytest-order = {version = "^1.0.0", optional = true}
pytest-qt = {version = "^4.0.2", optional = true}
pytest-timeout = {version = "^2.0.2", optional = true}
pytest-xvfb = {version = "^2.0.0", optional = true, markers = "sys_platform == 'linux'"}

# TODO make napari optional, move to `testing` extras
[tool.poetry.extras]
testing = [
    "napari",
    "pytest",
    "pytest-cov",
    "pytest-faulthandler",
    "pytest-order",
    "pytest-qt",
    "pytest-timeout",
    "pytest-xvfb",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
addopts = ["--cov=napari_tiler", "--cov-report=html"]
