[metadata]
name = napari_tiler
description = N-dimensional tiling and merging support for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdmorello/napari-tiler
author = Tim Morello
author_email = tdmorello@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/tdmorello/napari-tiler/issues
    Documentation = https://github.com/tdmorello/napari-tiler#README.md
    Source Code = https://github.com/tdmorello/napari-tiler
    User Support = https://github.com/tdmorello/napari-tiler/issues

[options]
packages = find:
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    tiler
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-tiler = napari_tiler

[options.extras_require]
testing =
    pytest
    pytest-faulthandler
    pytest-order
    pytest-qt
    pytest-timeout
